# haskell-gi

./: .gitignore  Dump.hs  GObject-Introspection.cabal  Generate.hs  Main.hs  Test.hs  haskell-gi.hs  test.hs
GI/: API.hs  ArgInfo.chs  BaseInfo.chs  BaseInfo.h  CallableInfo.chs  Code.hs  CodeGen.hs  ConstantInfo.chs  EnumInfo.chs  Info.hs  Type.hs  TypeInfo.chs  Typelib.chs  Types.chs  Util.hs  Value.chs
GI/Internal/: ArgInfo.chs  BaseInfo.chs  CallableInfo.chs  ConstantInfo.chs  EnumInfo.chs  FunctionInfo.chs  InterfaceInfo.chs  ObjectInfo.chs  ParamFlag.hs  PropertyInfo.chs  StructInfo.chs  TypeInfo.chs  Typelib.chs  Types.chs
