Name:                GObject-Introspection
Version:             0.1
Synopsis:            Generate Haskell bindings for GObject-Introspection-capable libraries
Homepage:            http://lol
License:             LGPL-2.1
License-file:        LICENSE
Author:              Will Thompson
Maintainer:          will@willthompson.co.uk
Stability:           Experimental
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.2
Extra-source-files:  

Executable haskell-gi-dump
  main-is: Dump.hs
  other-modules:
      GI.Internal.Types,
      GI.Internal.ArgInfo,
      GI.Internal.BaseInfo,
      GI.Internal.CallableInfo,
      GI.Internal.ConstantInfo,
      GI.Internal.EnumInfo,
      GI.Internal.FieldInfo,
      GI.Internal.FunctionInfo,
      GI.Internal.InterfaceInfo,
      GI.Internal.ObjectInfo,
      GI.Internal.ParamFlag,
      GI.Internal.PropertyInfo,
      GI.Internal.StructInfo,
      GI.Internal.TypeInfo,
      GI.Internal.Typelib,
      GI.API,
      GI.Util,
      GI.Value
  pkgconfig-depends: gobject-introspection-1.0
  extensions: ForeignFunctionInterface
  build-depends: base >= 4, gtk, glib
  build-tools: hsc2hs
